<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/dimen_5"
        android:background="@drawable/background_white_filled"
        android:padding="@dimen/dimen_24"
        tools:context=".presentation.view.AddTransactionDialogFragment">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_dialog_cross"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimen_5"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/background_purple_filled"
            app:srcCompat="@drawable/ic_cross_white_filled" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_add_transaction_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_condensed_regular"
            android:textColor="@color/purple_700"
            android:textSize="24sp"
            android:textStyle="bold"
            android:text="@string/dialog_add_transaction_title"
            app:fontFamily="@font/roboto_condensed_regular"
            app:layout_constraintRight_toLeftOf="@id/iv_dialog_cross"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/iv_dialog_cross"
            app:layout_constraintTop_toTopOf="@id/iv_dialog_cross"
            app:layout_constraintBottom_toBottomOf="@id/iv_dialog_cross" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spinner_transaction_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_16"
            android:textColor="@color/black"
            android:spinnerMode="dropdown"
            android:overlapAnchor="false"
            android:theme="@style/ThemeOverlay.AppCompat.Light"
            android:background="@drawable/background_outline"
            android:prompt="@string/spinner_title"
            android:dropDownSelector="@drawable/ic_arrow_drop_down"
            app:layout_constraintTop_toBottomOf="@id/tv_add_transaction_title"
            tools:listitem="@layout/layout_spinner_item" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/tv_add_transaction_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_16"
            android:background="@drawable/background_outline"
            android:hint="@string/dialog_add_transaction_description_hint"
            android:padding="@dimen/dimen_10"
            android:textSize="@dimen/dimen_text_16"
            android:textColor="@color/black"
            app:fontFamily="@font/roboto"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spinner_transaction_type" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_add_transaction_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_16"
            android:background="@drawable/background_outline"
            android:padding="@dimen/dimen_10"
            android:hint="@string/dialog_add_transaction_date_hint"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_text_16"
            app:fontFamily="@font/roboto"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_add_transaction_description" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/background_outline"
            app:layout_constraintBottom_toBottomOf="@id/iv_price_decrement"
            app:layout_constraintLeft_toLeftOf="@id/et_add_transaction_price"
            app:layout_constraintRight_toRightOf="@id/iv_price_increment"
            app:layout_constraintTop_toTopOf="@id/iv_price_increment" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_add_transaction_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_16"
            android:background="@null"
            android:hint="@string/dialog_add_transaction_price_hint"
            android:padding="@dimen/dimen_10"
            android:textSize="@dimen/dimen_text_16"
            android:textColor="@color/black"
            app:fontFamily="@font/roboto"
            android:inputType="numberDecimal"
            app:layout_constraintEnd_toStartOf="@id/iv_price_increment"
            app:layout_constraintRight_toLeftOf="@id/iv_price_increment"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_add_transaction_date" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_price_increment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/background_top_radius_right_filled_purple"
            app:layout_constraintBottom_toTopOf="@id/iv_price_decrement"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/et_add_transaction_price"
            app:layout_constraintVertical_chainStyle="spread"
            app:srcCompat="@drawable/ic_arrow_drop_up" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_price_decrement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/background_bottom_radius_right_filled_purple"
            app:layout_constraintBottom_toBottomOf="@id/et_add_transaction_price"
            app:layout_constraintRight_toRightOf="parent"
            app:srcCompat="@drawable/ic_arrow_drop_down" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_add_transaction"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_16"
            android:background="@drawable/background_purple_filled"
            android:text="@string/text_add"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:fontFamily="@font/roboto"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_add_transaction_price" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>